// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/updates/generate generateBranchConfig() handles @types specially (reversed) 1`] = `
{
  "addLabels": [],
  "automerge": false,
  "branchName": "some-branch",
  "commitMessage": "",
  "constraints": {},
  "depName": "some-dep",
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "",
  "displayPending": "",
  "displayTo": "0.6.0",
  "labels": [
    "a",
    "c",
    "b",
  ],
  "manager": "some-manager",
  "newValue": "0.6.0",
  "prBodyColumns": [],
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "releaseTimestamp": undefined,
  "reuseLockFiles": true,
  "upgrades": [
    {
      "branchName": "some-branch",
      "commitMessage": "",
      "depName": "some-dep",
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "0.6.0",
      "labels": [
        "a",
        "c",
      ],
      "manager": "some-manager",
      "newValue": "0.6.0",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
    },
    {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "commitMessage": "",
      "datasource": "npm",
      "depName": "some-dep",
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "1.0.0",
      "labels": [
        "a",
        "b",
      ],
      "manager": "some-manager",
      "newValue": "1.0.0",
      "prTitle": "some-other-title",
      "prettyDepType": "dependency",
    },
    {
      "branchName": "some-branch",
      "commitMessage": "",
      "depName": "@types/some-dep",
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "0.5.7",
      "labels": [
        "a",
      ],
      "manager": "some-manager",
      "newValue": "0.5.7",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
    },
  ],
}
`;

exports[`workers/repository/updates/generate generateBranchConfig() handles @types specially 1`] = `
{
  "addLabels": [],
  "automerge": false,
  "branchName": "some-branch",
  "commitBodyTable": true,
  "commitMessage": "\\n\\n| datasource | package         | from  | to    |\\n| ---------- | --------------- | ----- | ----- |\\n| npm        | @types/some-dep | 0.5.7 | 0.5.8 |\\n",
  "constraints": {},
  "datasource": "npm",
  "depName": "some-dep",
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "",
  "displayPending": "",
  "displayTo": "0.6.0",
  "hasTypes": true,
  "isRange": false,
  "labels": [],
  "manager": "some-manager",
  "newValue": "0.6.0",
  "prBodyColumns": [],
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "recreateClosed": false,
  "releaseTimestamp": undefined,
  "reuseLockFiles": true,
  "upgrades": [
    {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "commitMessage": "",
      "datasource": "npm",
      "depName": "some-dep",
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "0.6.0",
      "isRange": false,
      "manager": "some-manager",
      "newValue": "0.6.0",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "recreateClosed": false,
    },
    {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "commitMessage": "",
      "datasource": "npm",
      "depName": "some-dep",
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "1.0.0",
      "isRange": false,
      "manager": "some-manager",
      "newValue": "1.0.0",
      "prTitle": "some-other-title",
      "prettyDepType": "dependency",
    },
    {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "commitMessage": "",
      "currentValue": "0.5.7",
      "currentVersion": "0.5.7",
      "datasource": "npm",
      "depName": "@types/some-dep",
      "displayFrom": "0.5.7",
      "displayPending": "",
      "displayTo": "0.5.8",
      "isRange": false,
      "manager": "some-manager",
      "newValue": "0.5.8",
      "newVersion": "0.5.8",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "prettyNewVersion": "v0.5.8",
    },
  ],
}
`;

exports[`workers/repository/updates/generate generateBranchConfig() handles lockFileMaintenance 1`] = `
{
  "addLabels": [],
  "automerge": false,
  "branchName": "some-branch",
  "commitMessage": "",
  "constraints": {},
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "",
  "displayPending": "",
  "displayTo": "",
  "isLockFileMaintenance": true,
  "labels": [],
  "manager": "some-manager",
  "prBodyColumns": [],
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "releaseTimestamp": undefined,
  "reuseLockFiles": true,
  "upgrades": [
    {
      "branchName": "some-branch",
      "commitMessage": "",
      "displayFrom": "",
      "displayPending": "",
      "displayTo": "",
      "isLockFileMaintenance": true,
      "manager": "some-manager",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
    },
  ],
}
`;

exports[`workers/repository/updates/generate generateBranchConfig() handles lockFileUpdate 1`] = `
{
  "addLabels": [],
  "automerge": false,
  "branchName": "some-branch",
  "commitMessage": "",
  "constraints": {},
  "currentValue": "^1.0.0",
  "currentVersion": "1.0.0",
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "1.0.0",
  "displayPending": "",
  "displayTo": "1.0.1",
  "isLockfileUpdate": true,
  "isRange": false,
  "labels": [],
  "lockedVersion": "1.0.0",
  "manager": "some-manager",
  "newValue": "^1.0.0",
  "newVersion": "1.0.1",
  "prBodyColumns": [],
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "prettyNewVersion": "v1.0.1",
  "releaseTimestamp": undefined,
  "reuseLockFiles": true,
  "upgrades": [
    {
      "branchName": "some-branch",
      "commitMessage": "",
      "currentValue": "^1.0.0",
      "currentVersion": "1.0.0",
      "displayFrom": "1.0.0",
      "displayPending": "",
      "displayTo": "1.0.1",
      "isLockfileUpdate": true,
      "isRange": false,
      "lockedVersion": "1.0.0",
      "manager": "some-manager",
      "newValue": "^1.0.0",
      "newVersion": "1.0.1",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "prettyNewVersion": "v1.0.1",
    },
  ],
}
`;

exports[`workers/repository/updates/generate generateBranchConfig() handles upgrades: some-title (patch) 1`] = `"some-title (patch)"`;
